@@ -65,14 +65,17 @@ def get_machine_id():
 
         # On OS X we can use the computer's serial number assuming that
         # ioreg exists and can spit out that information.
-        from subprocess import Popen, PIPE
         try:
+            # Also catch import errors: subprocess may not be available, e.g.
+            # Google App Engine
+            # See https://github.com/pallets/werkzeug/issues/925
+            from subprocess import Popen, PIPE
             dump = Popen(['ioreg', '-c', 'IOPlatformExpertDevice', '-d', '2'],
                          stdout=PIPE).communicate()[0]
             match = re.search(b'"serial-number" = <([^>]+)', dump)
             if match is not None:
                 return match.group(1)
-        except OSError:
+        except (OSError, ImportError):
             pass
 
         # On Windows we can use winreg to get the machine guid
