@@ -6,6 +6,7 @@ Version 0.11.10
 
 - Fixed a bug that occurs when running on Python 2.6 and using a broken locale.
   See pull request #912.
+- Fixed a crash when running the debugger on Google App Engine. See issue #925.
 
 Version 0.11.9
 --------------
